@@ -5,8 +5,6 @@
 '********'
 - backends: write a 'debug' backend to trace/audit all backend calls
 '********'
-- use mysql_config
-'********'
 - add config file parser
     - function config_to_data() / OK
     - write functions / OK
