@@ -1,3 +1,7 @@
+2005-10-11  Pierre Chifflier  <pollux@wzdftpd.net>
+
+	* feature: use mysql_config to detect mysql headers and libs
+
 2005-10-10  Pierre Chifflier  <pollux@wzdftpd.net>
 
 	* feature: basic support of new config format, a few changes were
